tests/ui/consts/const-try.stderr
error: const `impl` for trait `FromResidual` which is not marked with `#[const_trait]`
  --> $DIR/const-try.rs:16:12
   |
LL | impl const FromResidual<Error> for TryMe {
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `Try` which is not marked with `#[const_trait]`
  --> $DIR/const-try.rs:23:12
   |
LL | impl const Try for TryMe {
   |            ^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0015]: `?` cannot determine the branch of `TryMe` in constant functions
  --> $DIR/const-try.rs:36:5
   |
LL |     TryMe?;
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `TryMe` in constant functions
  --> $DIR/const-try.rs:36:5
   |
LL |     TryMe?;
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
